# PerkAdjuster

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: headerlist.cmake  sourcelist.cmake
include/: hooks.h  iniParser.h  nameHolder.h  papyrusAPI.h  perkManipulator.h
include/CLIBUtil/: bitmasks.hpp  constexpr_map.hpp  distribution.hpp  editorID.hpp  hash.hpp  hotkeys.hpp  numeric.hpp  rng.hpp  simpleINI.hpp  singleton.hpp  string.hpp  utils.hpp
include/CLIBUtil/detail/: SimpleIni.h  XoshiroCpp.hpp
src/: PCH.h  hooks.cpp  hooks.h  iniParser.cpp  main.cpp  nameHolder.cpp  nameHolder.h  papyrus.cpp  papyrus.h  papyrusAPI.cpp  perkManipulator.cpp  perkManipulator.h  serde.cpp  serde.h  settings.cpp  settings.h
